Fixes issue with too much space between photos and header on smaller widths.

--- a/src/sass/partials/_blog_preload.scss
+++ b/src/sass/partials/_blog_preload.scss
@@ -58,10 +58,10 @@
 	}
   .blog-image {
   	width:100%;
-  	// margin:0 auto rem(40);
 		margin:0 auto;
   	position:relative;
 		padding:59% 0 0;
 		background-color:$xxlight;
+		@media screen and (max-width:rem(430)){margin-top:-20px;}
   	img { width:100%;position:absolute;top:0;}
   }
